fix text overflow in profile; fix profile picture polling; fix profile picture edit preview overflowing

--- a/src/app/views/profile-editor/profile-editor.css
+++ b/src/app/views/profile-editor/profile-editor.css
@@ -23,6 +23,8 @@
   justify-content: center;
   align-items: center;
   user-select: none;
+  /* Set to hidden to avoid having the profile picture overflow out of the profile-picture box */
+  overflow: hidden;
 }
 
 .profile-picture-upload-button:hover {
